src/include/dart_api.h


typedef struct _Dart_Handle* Dart_Handle;
DART_EXPORT void Dart_ExitScope(void);
DART_EXPORT Dart_Handle Dart_FunctionOwner(Dart_Handle function);
DART_EXPORT Dart_Handle Dart_FunctionIsStatic(Dart_Handle function,
                                              bool* is_static);
DART_EXPORT bool Dart_IsTearOff(Dart_Handle object);
DART_EXPORT Dart_Handle Dart_ClosureFunction(Dart_Handle closure);
DART_EXPORT Dart_Handle Dart_ClassLibrary(Dart_Handle cls_type);
DART_EXPORT Dart_Handle Dart_IntegerFitsIntoInt64(Dart_Handle integer,
                                                  bool* fits);
DART_EXPORT Dart_Handle Dart_IntegerFitsIntoUint64(Dart_Handle integer,
                                                   bool* fits);
DART_EXPORT Dart_Handle Dart_NewInteger(int64_t value);
DART_EXPORT Dart_Handle Dart_NewIntegerFromUint64(uint64_t value);
DART_EXPORT Dart_Handle Dart_NewIntegerFromHexCString(const char* value);
DART_EXPORT Dart_Handle Dart_IntegerToInt64(Dart_Handle integer,
                                            int64_t* value);
DART_EXPORT Dart_Handle Dart_IntegerToUint64(Dart_Handle integer,
                                             uint64_t* value);
DART_EXPORT Dart_Handle Dart_IntegerToHexCString(Dart_Handle integer,
                                                 const char** value);
DART_EXPORT Dart_Handle Dart_NewDouble(double value);
DART_EXPORT Dart_Handle Dart_DoubleValue(Dart_Handle double_obj, double* value);
DART_EXPORT Dart_Handle Dart_GetStaticMethodClosure(Dart_Handle library,
                                                    Dart_Handle cls_type,
                                                    Dart_Handle function_name);
DART_EXPORT Dart_Handle Dart_True(void);
DART_EXPORT Dart_Handle Dart_False(void);
DART_EXPORT Dart_Handle Dart_NewBoolean(bool value);